Fix overflowing digits on display

--- a/calculator/style.css
+++ b/calculator/style.css
@@ -26,21 +26,23 @@ body {
     justify-content: space-between;
     gap: 1em;
     flex-wrap: nowrap;
+    position: relative;
 }
 
 .display {
+    width: 350px;
+    margin-bottom: 0.3em;
     font-size: 40px;
     height: 50px;
     background-color: rgb(218, 218, 218);
     border-radius: 10px;
-    margin-bottom: 0.5em;
     padding: 10px;
     line-height: 50px;
     text-align: right;
     vertical-align: middle;
     color: black;
-    max-width: inherit;
-    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 .row {
@@ -62,6 +64,11 @@ button {
 
 button:active {
     transform: translateY(2px);
+}
+
+button.digit {
+    box-shadow: -6px -6px 16px rgba(255, 255, 255, 0.8), 6px 6px 16px rgba(209, 205, 199, .8);
+
 }
 
 .equal {
